# read-the-docs-tutorial

./: .readthedocs.yaml  README.rst  pyproject.toml
docs/: api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
src/mymodule/: script1.py
src/mymodule/tools/: execute_script1.py
